# debug-proxy

./: Cargo.toml  README.md  build.rs
.github/workflows/: build.yml  ci.yml
src/: config.rs  lib.rs  main.rs  process.rs  proxy.rs  recorder.rs
tests/: integration_tests.rs  unit_tests.rs
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/dist.backup/: index.html
ui/dist.backup/assets/: index-BRXcyb2L.js  index-Jki5eemv.css
ui/src/: App.css  App.tsx  index.css
