[package]
name = "debug-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
clap = { version = "4.0", features = ["derive"] }
hyper = { version = "0.14", features = ["full"] }
hyper-rustls = "0.24"
http = "0.2"
bytes = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
once_cell = "1.0"
parking_lot = "0.12"
mime = "0.3"
base64 = "0.22"
url = "2.5"
rust-embed = { version = "8.0", features = ["mime-guess"] }

[build-dependencies]
mime_guess = "2.0"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
reqwest = { version = "0.11", features = ["json"] }
